<resources>
    <string name="app_name">Rail Connect</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="invalid_name">Please Enter Valid Name</string>
    <string name="invalid_email">Enter Valid Email</string>
    <string name="invalid_password">Password should not contain special characters and minimum length should be 4.</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="prompt_source">Source</string>
    <string name="prompt_destination">Destination</string>
    <string name="prompt_date">Select Date</string>
    <string name="prompt_no_of_travellers">Number Of Travellers</string>
    <string name="prompt_train_no">Train Number</string>
    <string name="action_book">Book</string>
    <string name="show_train_list">Show Train List</string>
    <string name="invalid_source">Enter a Valid Source</string>
    <string name="invalid_destination">Enter a Valid Destination</string>
    <string name="invalid_number_of_travellers">Minimum 1 Traveller Required</string>
    <string name="invalid_date">Enter A Valid Date</string>
    <string name="invalid_train">Enter A Valid Train No</string>
</resources>