<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookingActivity">

    <EditText
        android:id="@+id/source"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_source"
        android:hint="Source"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/destination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_destination"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/source"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/source"
        app:layout_constraintTop_toBottomOf="@+id/source" />

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:hint="@string/prompt_date"
        app:layout_constraintEnd_toEndOf="@+id/destination"
        app:layout_constraintStart_toStartOf="@+id/destination"
        app:layout_constraintTop_toBottomOf="@+id/destination" />

    <EditText
        android:id="@+id/noOfTravellers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_no_of_travellers"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/trainNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:hint="@string/prompt_train_no"
        app:layout_constraintEnd_toEndOf="@+id/noOfTravellers"
        app:layout_constraintStart_toStartOf="@+id/noOfTravellers"
        app:layout_constraintTop_toBottomOf="@+id/noOfTravellers" />

    <TextView
        android:id="@+id/showTrainList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/show_train_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@+id/trainNo"
        app:layout_constraintStart_toStartOf="@+id/trainNo"
        app:layout_constraintTop_toBottomOf="@+id/trainNo"
        tools:text="Show Train List" />

    <Button
        android:id="@+id/book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="84dp"
        android:text="@string/action_book"
        app:layout_constraintEnd_toEndOf="@+id/trainNo"
        app:layout_constraintStart_toStartOf="@+id/trainNo"
        app:layout_constraintTop_toBottomOf="@+id/showTrainList" />

</androidx.constraintlayout.widget.ConstraintLayout>